@@ -1,3 +1,8 @@
+2006-12-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* elflink.c (bfd_elf_gc_sections): Also search for corresponding
+	sections with .gnu.linkonce.t. prefix.
+
 2006-08-08  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/2724
